list(APPEND COMMON_DEPENDENCIES common_utils common_net common_thread)

if (WIN32)
    LIST(APPEND COMMON_DEPENDENCIES wsock32 ws2_32)
elseif(LINUX)
    LIST(APPEND COMMON_DEPENDENCIES pthread)
endif()

add_subdirectory(nslookup)
add_subdirectory(tcp)
add_subdirectory(udp)
add_subdirectory(Lab1)
add_subdirectory(Lab2)
add_subdirectory(Lab3)
add_subdirectory(Lab4)
add_subdirectory(Lab5)
add_subdirectory(Lab6)
add_subdirectory(Lab7)
add_subdirectory(Lab8)
add_subdirectory(Prak1)
add_subdirectory(Prak3)
add_subdirectory(Prak4)
add_subdirectory(Prak5)
add_subdirectory(Prak6)
add_subdirectory(Prak7)
add_subdirectory(Prak8)